--- a/CodeCamp.Android/packages.config
+++ b/CodeCamp.Android/packages.config
@@ -2,17 +2,18 @@
 <packages>
   <package id="LinqToTwitter" version="3.0.4" targetFramework="MonoAndroid44" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="MonoAndroid44" />
-  <package id="Microsoft.Bcl.Build" version="1.0.17-beta" targetFramework="MonoAndroid44" />
-  <package id="Microsoft.Bcl.Compression" version="3.9.83" targetFramework="MonoAndroid44" />
-  <package id="Microsoft.Net.Http" version="2.2.27-beta" targetFramework="MonoAndroid44" />
-  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="MonoAndroid44" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="MonoAndroid44" />
+  <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="MonoAndroid44" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="MonoAndroid44" />
+  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="MonoAndroid44" />
   <package id="sqlite-net-pcl" version="1.0.9-alpha" targetFramework="MonoAndroid42" />
-  <package id="SQLitePCL.raw_basic" version="0.5.0" targetFramework="MonoAndroid42" />
+  <package id="SQLitePCL.raw_basic" version="0.6.1" targetFramework="MonoAndroid44" />
   <package id="Xam.Plugins.Settings" version="1.3.0.0" targetFramework="MonoAndroid44" />
-  <package id="Xamarin.Android.Support.v4" version="20.0.0.2" targetFramework="MonoAndroid44" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="20.0.0" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.Android.Support.v13" version="20.0.0.4" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.Android.Support.v4" version="20.0.0.4" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="20.0.0.1" targetFramework="MonoAndroid44" />
   <package id="Xamarin.Android.Support.v7.MediaRouter" version="20.0.0" targetFramework="MonoAndroid44" />
-  <package id="Xamarin.Forms" version="1.2.1.6229" targetFramework="MonoAndroid44" />
-  <package id="Xamarin.Forms.Maps" version="1.2.1.6229" targetFramework="MonoAndroid44" />
-  <package id="Xamarin.GooglePlayServices" version="18.0.0.1" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.Forms" version="1.2.2.6243" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.Forms.Maps" version="1.2.2.6243" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.GooglePlayServices" version="19.0.0.1" targetFramework="MonoAndroid44" />
 </packages>
