--- a/CodeCamp.iOS/packages.config
+++ b/CodeCamp.iOS/packages.config
@@ -2,13 +2,13 @@
 <packages>
   <package id="LinqToTwitter" version="3.0.4" targetFramework="MonoTouch10" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="MonoTouch10" />
-  <package id="Microsoft.Bcl.Build" version="1.0.17-beta" targetFramework="MonoTouch10" />
-  <package id="Microsoft.Bcl.Compression" version="3.9.83" targetFramework="MonoTouch10" />
-  <package id="Microsoft.Net.Http" version="2.2.27-beta" targetFramework="MonoTouch10" />
-  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="MonoTouch10" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="MonoTouch10" />
+  <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="MonoTouch10" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="MonoTouch10" />
+  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="MonoTouch10" />
   <package id="sqlite-net-pcl" version="1.0.9-alpha" targetFramework="MonoTouch10" />
-  <package id="SQLitePCL.raw_basic" version="0.5.0" targetFramework="MonoTouch10" />
+  <package id="SQLitePCL.raw_basic" version="0.6.1" targetFramework="MonoTouch10" />
   <package id="Xam.Plugins.Settings" version="1.3.0.0" targetFramework="MonoTouch10" />
-  <package id="Xamarin.Forms" version="1.2.2.6240-pre2" targetFramework="MonoTouch10" />
-  <package id="Xamarin.Forms.Maps" version="1.2.2.6240-pre2" targetFramework="MonoTouch10" />
+  <package id="Xamarin.Forms" version="1.2.2.6243" targetFramework="MonoTouch10" />
+  <package id="Xamarin.Forms.Maps" version="1.2.2.6243" targetFramework="MonoTouch10" />
 </packages>
