--- a/CodeCamp/packages.config
+++ b/CodeCamp/packages.config
@@ -2,14 +2,14 @@
 <packages>
   <package id="LinqToTwitter" version="3.0.4" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
-  <package id="Microsoft.Bcl.Build" version="1.0.17-beta" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
-  <package id="Microsoft.Bcl.Compression" version="3.9.83" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
-  <package id="Microsoft.Net.Http" version="2.2.27-beta" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
-  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
+  <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
+  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
   <package id="sqlite-net-pcl" version="1.0.9-alpha" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
-  <package id="SQLitePCL.raw_basic" version="0.5.0" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
+  <package id="SQLitePCL.raw_basic" version="0.6.1" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
   <package id="Xam.Plugins.Settings" version="1.3.0.0" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
-  <package id="Xamarin.Forms" version="1.2.2.6240-pre2" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
-  <package id="Xamarin.Forms.Maps" version="1.2.2.6240-pre2" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
+  <package id="Xamarin.Forms" version="1.2.2.6243" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
+  <package id="Xamarin.Forms.Maps" version="1.2.2.6243" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
 </packages>
